# finnhub-stock-analysis-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: main.yml
src/: candlestick.rs  lib.rs  main.rs  mean.rs  stock_handle.rs  utils.rs
src/cli/: cmd.rs
