[package]
name = "finnhub_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
url = "2.2.2"

