[package]
name = "finnhub_ws"
version = "0.1.0"
edition = "2021"
authors = ["Pavlos Karakalidis <p.karakal@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "3.2.6", features = ["cargo", "derive", "env"] }
csv = "1.1"
chrono = { version = "0.4.20", features = ["serde"] }
crossbeam-channel = "0.5.5"
crossbeam-utils = "0.8.10"
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
once_cell = "1.13.0"
rayon = "1.5"
regex = "1.6.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serial_test = "0.8.0"
tokio = { version = "1.20.3", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
url = "2.2.2"

